@@ -1,22 +1,27 @@
 /* $Id$ */
 (function($) {
 
-Drupal.adminMenu = Drupal.adminMenu || {};
+Drupal.admin = Drupal.admin || { behaviors: {} };
 
 /**
  * Core behavior for Administration menu.
  *
- * This tests whether there is an administration menu is in the output and
- * executes all registered behaviors.
+ * Test whether there is an administration menu is in the output and execute all
+ * registered behaviors.
  */
 Drupal.behaviors.adminMenu = {
   attach: function (context) {
-    var $adminMenu = $('#admin-menu');
-    if ($adminMenu.size()) {
-      $.each(Drupal.adminMenu, function() {
-        this(context, $adminMenu);
-      });
-    }
+    // Initialize settings.
+    Drupal.settings.admin_menu = $.extend({
+      margin_top: false,
+      position_fixed: false,
+      tweak_modules: false,
+      tweak_tabs: false,
+      destination: ''
+    }, Drupal.settings.admin_menu || {});
+    var $adminMenu = $('#admin-menu:not(.admin-menu-processed)', context);
+    // Apply our behaviors.
+    Drupal.admin.attachBehaviors(context, $adminMenu);
   }
 };
 
@@ -27,26 +32,49 @@ Drupal.behaviors.adminMenu = {
  */
 Drupal.behaviors.adminMenuCollapseModules = {
   attach: function (context) {
-    if (Drupal.settings.admin_menu && Drupal.settings.admin_menu.tweak_modules) {
+    if (Drupal.settings.admin_menu.tweak_modules) {
       $('#system-modules fieldset:not(.collapsed), #system-modules-1 fieldset:not(.collapsed)', context).addClass('collapsed');
     }
   }
 };
 
 /**
- * Apply 'margin-top'; directly applying marginTop does not work in IE.
+ * Apply margin to page.
+ *
+ * Note that directly applying marginTop does not work in IE. To prevent
+ * flickering/jumping page content with client-side caching, this is a regular
+ * Drupal behavior.
  */
-Drupal.adminMenu.marginTop = function (context, $adminMenu) {
-  if (Drupal.settings.admin_menu && Drupal.settings.admin_menu.margin_top) {
-    $('body', context).addClass('admin-menu');
+Drupal.behaviors.adminMenuMarginTop = function (context) {
+  attach: function (context) {
+    if (Drupal.settings.admin_menu.margin_top) {
+      $('body', context).addClass('admin-menu');
+    }
+  }
+};
+
+/**
+ * @defgroup admin_behaviors Administration behaviors.
+ * @{
+ */
+
+/**
+ * Attach administrative behaviors.
+ */
+Drupal.admin.attachBehaviors = function (context, $adminMenu) {
+  if ($adminMenu.length) {
+    $adminMenu.addClass('admin-menu-processed');
+    $.each(Drupal.admin.behaviors, function() {
+      this(context, $adminMenu);
+    });
   }
 };
 
 /**
  * Apply 'position: fixed'.
  */
-Drupal.adminMenu.positionFixed = function (context, $adminMenu) {
-  if (Drupal.settings.admin_menu && Drupal.settings.admin_menu.position_fixed) {
+Drupal.admin.behaviors.positionFixed = function (context, $adminMenu) {
+  if (Drupal.settings.admin_menu.position_fixed) {
     $adminMenu.css('position', 'fixed');
   }
 };
@@ -54,8 +82,8 @@ Drupal.adminMenu.positionFixed = function (context, $adminMenu) {
 /**
  * Move page tabs into administration menu.
  */
-Drupal.adminMenu.pageTabs = function (context, $adminMenu) {
-  if (Drupal.settings.admin_menu && Drupal.settings.admin_menu.tweak_tabs) {
+Drupal.admin.behaviors.pageTabs = function (context, $adminMenu) {
+  if (Drupal.settings.admin_menu.tweak_tabs) {
     $('ul.tabs.primary li', context).addClass('admin-menu-tab').appendTo('#admin-menu > ul');
     $('ul.tabs.secondary', context).appendTo('#admin-menu > ul > li.admin-menu-tab.active');
     $('ul.tabs.primary', context).remove();
@@ -65,8 +93,8 @@ Drupal.adminMenu.pageTabs = function (context, $adminMenu) {
 /**
  * Inject destination query strings for current page.
  */
-Drupal.adminMenu.destination = function (context, $adminMenu) {
-  if (Drupal.settings.admin_menu && Drupal.settings.admin_menu.destination) {
+Drupal.admin.behaviors.destination = function (context, $adminMenu) {
+  if (Drupal.settings.admin_menu.destination) {
     $('.admin-menu-destination', $adminMenu).each(function() {
       this.search += (!this.search.length ? '?' : '&') + Drupal.settings.admin_menu.destination;
     });
@@ -79,7 +107,7 @@ Drupal.adminMenu.destination = function (context, $adminMenu) {
  * @todo This has to run last.  If another script registers additional behaviors
  *   it will not run last.
  */
-Drupal.adminMenu.hover = function (context, $adminMenu) {
+Drupal.admin.behaviors.hover = function (context, $adminMenu) {
   // Hover emulation for IE 6.
   if ($.browser.msie && parseInt(jQuery.browser.version) == 6) {
     $('li', $adminMenu).hover(function() {
@@ -105,5 +133,9 @@ Drupal.adminMenu.hover = function (context, $adminMenu) {
     }, 400);
   });
 };
+
+/**
+ * @} End of "defgroup admin_behaviors".
+ */
 
 })(jQuery);
