@@ -65,6 +65,7 @@ function admin_menu_menu() {
     'page arguments' => array('admin_menu_theme_settings'),
     'access arguments' => array('administer site configuration'),
   );
+  // Menu link callbacks.
   $items['admin_menu/toggle-modules'] = array(
     'page callback' => 'admin_menu_toggle_modules',
     'access arguments' => array('administer site configuration'),
@@ -87,28 +88,31 @@ function admin_menu_menu() {
  * all pages via hook_init().
  */
 function admin_menu_init() {
-  if (user_access('access administration menu')) {
-    $path = drupal_get_path('module', 'admin_menu');
-    drupal_add_css($path . '/admin_menu.css', array('preprocess' => FALSE));
-    // Performance: Defer execution.
-    drupal_add_js($path . '/admin_menu.js', array('defer' => TRUE));
-
-    // The destination query string for the current page is applied via JS.
-    drupal_add_js(array('admin_menu' => array('destination' => drupal_get_destination())), 'setting');
-
-    if ($setting = variable_get('admin_menu_margin_top', 1)) {
-      drupal_add_js(array('admin_menu' => array('margin_top' => $setting)), 'setting');
-    }
-    if ($setting = variable_get('admin_menu_position_fixed', 0)) {
-      drupal_add_js(array('admin_menu' => array('position_fixed' => $setting)), 'setting');
-    }
-    if ($setting = variable_get('admin_menu_tweak_tabs', 0)) {
-      drupal_add_js(array('admin_menu' => array('tweak_tabs' => $setting)), 'setting');
-    }
-    if ($_GET['q'] == 'admin/build/modules') {
-      drupal_add_js(array('admin_menu' => array('tweak_modules' => variable_get('admin_menu_tweak_modules', 0))), 'setting');
-    }
+  if (!user_access('access administration menu')) {
+    return;
   }
+  $path = drupal_get_path('module', 'admin_menu');
+  drupal_add_css($path . '/admin_menu.css', array('preprocess' => FALSE));
+  // Performance: Defer execution.
+  drupal_add_js($path . '/admin_menu.js', array('defer' => TRUE));
+
+  // Destination query strings are applied via JS.
+  $settings['destination'] = drupal_get_destination();
+
+  if ($setting = variable_get('admin_menu_margin_top', 1)) {
+    $settings['margin_top'] = $setting;
+  }
+  if ($setting = variable_get('admin_menu_position_fixed', 0)) {
+    $settings['position_fixed'] = $setting;
+  }
+  if ($setting = variable_get('admin_menu_tweak_tabs', 0)) {
+    $settings['tweak_tabs'] = $setting;
+  }
+  if ($_GET['q'] == 'admin/build/modules') {
+    $settings['tweak_modules'] = variable_get('admin_menu_tweak_modules', 0);
+  }
+
+  drupal_add_js(array('admin_menu' => $settings), 'setting');
 }
 
 /**
@@ -146,13 +150,13 @@ function admin_menu_footer($main = 0) {
 
   $cid = 'admin_menu:' . $user->uid . ':' . $language->language;
 
-  // Check for the flag indicating that we need to rebuild.
+  // Check for the flag indicating that we need to rebuild the menu.
   if (variable_get('admin_menu_rebuild_links', FALSE)) {
     module_load_include('inc', 'admin_menu');
     _admin_menu_rebuild_links();
     variable_del('admin_menu_rebuild_links');
   }
-  // Try to load and output administration menu from cache.
+  // Try to load and output administration menu from server-side cache.
   else {
     $cache = cache_get($cid, 'cache_menu');
     if ($cache && isset($cache->data)) {
